@@ -1,4 +1,4 @@
-#	$Id: Makefile,v 1.32 2009-05-19 20:17:14 guru Exp $
+#	$Id: Makefile,v 1.33 2009-05-20 03:51:46 guru Exp $
 #	makefile for misc directory
 #
 #-------------------------------------------------------------------------------
@@ -12,7 +12,7 @@ include $(GMTSRCDIR)gmtalldeps.macros
 INCLUDES	= -I$(srcdir) -I$(NETCDF_INC)
 
 PROGS_H		=
-PROGS_O		= gmt2kml.o gmtdigitize.o gmtdp.o gmtstitch.o nc2xy.o psmegaplot.o
+PROGS_O		= gmt2kml.o kml2gmt.o gmtdigitize.o gmtdp.o gmtstitch.o nc2xy.o psmegaplot.o
 PROGSPS_O	= makepattern.o
 MAN1		= $(PROGS_O:.o=.1) $(PROGSPS_O:.o=.1)
 
@@ -51,6 +51,7 @@ $(PROGSPS_O):	$(GMT_H) $(PS_H) $(PROGS_H)
 #-------------------------------------------------------------------------------
 
 gmt2kml$(EXE):		gmt2kml.o
+kml2gmt$(EXE):		kml2gmt.o
 gmtdigitize$(EXE):	gmtdigitize.o
 gmtdp$(EXE):		gmtdp.o
 gmtstitch$(EXE):	gmtstitch.o
